# tm4c129-launchpad

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.rs  flash_blink.sh  memory.x.in  objdump.txt
.github/: dependabot.yml
.github/workflows/: build.yaml
examples/: blink.rs  flash_blink.sh  udp.rs
firmware/: Cargo.toml  LICENSE  README.md  call_stack.sh  cg.dot  cg.ps
firmware/.cargo/: config
firmware/.github/workflows/: github-actions.yaml
firmware/examples/: adc.rs  blink.rs  blink_systick.rs  flash.sh  udp.rs  udp_echo.rs  udp_stream.rs
firmware/src/: board.rs  builtins.rs  lib.rs  startup.rs
firmware/src/drivers/: adc.rs  mod.rs
firmware/src/drivers/ethernet/: mod.rs  rdes.rs  socket.rs  status.rs  tdes.rs
software/udp_echo/: Cargo.toml
software/udp_echo/src/: main.rs
software/udp_stream/: Cargo.toml
software/udp_stream/src/: main.rs
software/udpclient/: Cargo.toml
software/udpclient/src/: main.rs
src/: board.rs  builtins.rs  lib.rs  memory.x  startup.rs
src/board/: mod.rs  startup.rs
src/drivers/: emac.rs  epi.rs  mod.rs
src/drivers/emac/: mod.rs  rdes.rs  rxdes.rs  tdes.rs  txdes.rs
src/drivers/ethernet/: mod.rs  packet.rs  rdes.rs  socket.rs  tdes.rs
