[package]
authors = [
	"James Logan <jlogan03@gmail.com>"
]
keywords = ["arm", "bare-metal", "blink", "tm4c129", "launchpad"]
license = "MIT"
name = "tm4c129-launchpad"
readme = "README.md"
version = "0.1.0"
description = "TM4C129-XL Launchpad board crate"
repository = "https://github.com/jlogan03/tm4c129-launchpad"
categories = ["hardware-support"]

[profile.release]
lto = true
debug = true
opt-level = "s"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
volatile-register = "0.2"
embedded-hal = "0.2"
tm4c129x-hal = "0.9.2"
