[package]
authors = [
	"James Logan <jlogan03@gmail.com>"
]
keywords = ["arm", "bare-metal", "blink", "tm4c129", "launchpad"]
license = "MIT"
name = "tm4c129-launchpad"
readme = "README.md"
version = "0.1.1"
description = "TM4C129-XL Launchpad board crate"
repository = "https://github.com/jlogan03/tm4c129-launchpad"
categories = ["hardware-support"]

[profile.release]
lto = true       # Use full link-time optimization to reduce file size
# debug = true     # Include debugging flags in release version; minimal effect on file size
opt-level = "s"  # Compiler otimization for minimum file size

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
tm4c129x-hal = "0.9.2"
panic-never = "0.1.0"
