[package]
authors = [
	"James Logan <jlogan03@gmail.com>"
]
keywords = ["arm", "bare-metal", "blink", "tm4c129", "stellaris", "launchpad"]
license = "MIT"
name = "tm4c129-launchpad"
readme = "README.md"
version = "0.2.2"
description = "TM4C129-XL Launchpad board crate"
repository = "https://github.com/jlogan03/tm4c129-launchpad"
categories = ["hardware-support"]
edition = "2021"

[profile.release]
opt-level = "s"  # Compiler optimization for minimum file size
lto = true       # Use full link-time optimization to reduce file size
debug = false
debug-assertions = false
overflow-checks = false

[profile.dev]
opt-level = "s"
lto = true
debug = true     # Include debugging flags & allow panic branches
debug-assertions = true
overflow-checks = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
tm4c129x-hal = "0.9.2"
panic-never = "0.1.0"
static_assertions = "1.1.0"
ufmt = "0.2.0"
modular-bitfield = "0.11.2"

# For ethernet example only
catnip = "0.3.0"
# catnip = { path="../../catnip", default_features=false }

# For interrupt example only
irq = "0.2.3"
