[package]
name = "udp_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
chrono = "0.4.24"
rpassword = "7.2.0"
core_affinity = "0.8.0"